# decoder-only-runner

./: .gitignore  README.md  environment.yml  generate_sparsity_results.sh  pyproject.toml  requirements-cu124.txt  requirements.txt  run_linear_sparsity_revision_from_base.sh  run_scenic_further_training_from_base.sh
configs/: accelerate_8xh20.yaml
data/: README.md
data/benchmarks/: iot_instruction_benchmark_200.json
data/scenic/: SCENIC_full_training_dataset.json
src/decoder_only/: __init__.py  custom_model.py  data.py  diagnose.py  evaluate.py  full_matrix.py  generate.py  loader.py  prune.py  sparsity.py  tokenizers.py  train.py
tests/: test_full_matrix_plan.py  test_loader_custom_tokenizer.py  test_loader_hf_local.py
